# gokart_pipeline_sample

./: Dockerfile  README.md  main.py  pyproject.toml
gokart_pipeline_sample/: __init__.py
gokart_pipeline_sample/pipeline/: check.py  gokart_util.py  load_data.py  make_output.py  pred.py  preprocess.py  run.py  run_middle.py  split_data.py  train.py  upload.py
gokart_pipeline_sample/pipeline/schemas/: schema.py
gokart_pipeline_sample/utils/: template.py
gokart_sample/: __init__.py
gokart_sample/pipeline/: data_upload.py  gokart_util.py  load_data.py  run.py  sample.py  split_data.py  train.py
gokart_sample/utils/: template.py
test/unit_test/: test_preprocess.py  test_sample.py
